Sonar clean-up
o squid:S1166 - preserve the original exceptions
o squid:S2333 - Redundant modifiers should not be used
o squid:S1132 - Strings literals on left side when checking for equality

Change-Id: Ibaf2c8e5abb8ec603b9f3996cdec681f004710b8
Reviewed-on: https://git.eclipse.org/r/78498
Tested-by: Hudson CI
Reviewed-by: Andi Bur <andi.bur@gmail.com>